# memo-inbox-client

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  DEV_REFERENCE.md  MEMO_INBOX_PRD.md  README.md  clean-build.ps1  convert_icon.ps1  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/: index.html  package.json  postcss.config.cjs  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: capacitor.config.ts  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/mobile/android/app/: build.gradle
apps/mobile/android/app/src/main/: AndroidManifest.xml
apps/mobile/android/app/src/main/res/values/: strings.xml
apps/mobile/src/: App.tsx
apps/web/: index.html  package.json  tailwind.config.ts  vite.config.ts
apps/web/src/: App.tsx
docs/plans/: 2026-04-11-memo-inbox-client-sdk-design.md  2026-04-11-memo-inbox-client-sdk-implementation.md  2026-04-11-memo-inbox-client-shell-homepage-design.md  2026-04-11-memo-inbox-client-shell-homepage-implementation.md
docs/superpowers/plans/: 2026-04-12-desktop-soft-delete-implementation.md  2026-04-13-desktop-review-implementation.md  2026-04-15-mobile-shell-safe-area-implementation.md  2026-04-16-desktop-inbox-back-to-top-and-mobile-review-attachments.md
docs/superpowers/specs/: 2026-04-12-desktop-soft-delete-design.md  2026-04-13-desktop-review-design.md  2026-04-15-mobile-shell-safe-area-design.md
(+1 files in other folders)
