[package]
name = "memo-inbox-client-desktop"
version = "0.1.0"
description = "Memo Inbox Client desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-store = "2.2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
