[package]
name = "memo-inbox-client-desktop"
version = "0.1.0"
description = "Memo Inbox Client desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2.7.0"
zip = "2.2.2"
scraper = "0.22.0"
base64 = "0.22.1"
tempfile = "3.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
